In video editor Color does not allow Alpha Under. It works in 4.1 but not 4.2 #121190

Closed
opened 2024-04-28 18:56:48 +02:00 by Stuart-Waymire · 3 comments

System Information
Operating system: Linux Ubuntu
Graphics card: Nvidia-340

Blender Version
Broken: (example: 2.80, edbf15d3c0, master, 2018-11-28, as found on the splash screen)
Worked: (newest version of Blender that worked as expected) Works in 4.1, not 4.2 alpha

Short description of error Color Effect Strip does not work with Alpha Under

Exact steps for others to reproduce the error
Based on the default startup or an attached .blend file (as simple as possible).
In Video Editor, Add an image to the scene which is smaller than the view size and extend the frames of the image. Now do an Add Color (default is black) and extend its frames. This will cover the underlying image. When working correctly in previous versions, you can then set the Color Effect Strip to "alpha under" so the image appears over the black background. This no longer works in 4.2, either for old videos I created in previous versions, nor if done from scratch.

**System Information** Operating system: Linux Ubuntu Graphics card: Nvidia-340 **Blender Version** Broken: (example: 2.80, edbf15d3c044, master, 2018-11-28, as found on the splash screen) Worked: (newest version of Blender that worked as expected) Works in 4.1, not 4.2 alpha **Short description of error** Color Effect Strip does not work with Alpha Under **Exact steps for others to reproduce the error** Based on the default startup or an attached .blend file (as simple as possible). In Video Editor, Add an image to the scene which is smaller than the view size and extend the frames of the image. Now do an Add Color (default is black) and extend its frames. This will cover the underlying image. When working correctly in previous versions, you can then set the Color Effect Strip to "alpha under" so the image appears over the black background. This no longer works in 4.2, either for old videos I created in previous versions, nor if done from scratch.
Stuart-Waymire added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2024-04-28 18:56:48 +02:00

I guess this is broken by f4f708a54f

Perhaps a solution would be to skip calling OpaqueQuadTracker::add_occluder if blend mode is alpha under? After checking this quickly it doesn't seem to work though.

It doesn't help that seq_render_strip_stack() is still a bit confusing to follow. I will strongly consider rewrite before even looking into this.

@aras_p Perhaps you can come up with something before I get to this?

I guess this is broken by f4f708a54f9feb1788ed7f1a3d6d16072c8008cd Perhaps a solution would be to skip calling `OpaqueQuadTracker::add_occluder` if blend mode is alpha under? After checking this quickly it doesn't seem to work though. It doesn't help that `seq_render_strip_stack()` is still a bit confusing to follow. I will strongly consider rewrite before even looking into this. @aras_p Perhaps you can come up with something before I get to this?

If I broke it, I should fix it! And yeah quite likely that "strip occlusion" might be the culprit. I'll see if it has some render test coverage too.

If I broke it, I should fix it! And yeah quite likely that "strip occlusion" might be the culprit. I'll see if it has some render test coverage too.
Aras Pranckevicius self-assigned this 2024-04-29 20:23:16 +02:00

Turns out it was not strip occlusion, but rather me being an idiot and accidentally subtly changing the alpha under logic when at full opacity. And the bug exists in 4.1 too. Fix incoming!

Turns out it was not strip occlusion, but rather me being an idiot and accidentally subtly changing the alpha under logic when at full opacity. And the bug exists in 4.1 too. Fix incoming!
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-04-30 08:32:38 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#121190
No description provided.