Fix #121190: VSE AlphaUnder with opacity=1 does not work properly

Accidental logic change in PR #116089, restore previous behavior

Pull Request: https://projects.blender.org/blender/blender/pulls/121224